new proj/src/objects/GE_HQ_Acc_AccPlan_Rel__c.object
<CustomObject>
    <description>This is junction object between Account and Account Plan</description>
    <fields>
        <fullName>GE_Energy_HQ_Region__c</fullName>
        <formula>GE_HQ_Account__r.GE_HQ_Region_Tier1__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GE Energy HQ Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_HQ_Acc_Type__c</fullName>
        <label>Planned Account Type</label>
        <picklist>
            <picklistValues>
                <fullName>Personal Plan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Account Plan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Private Plan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Personal</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_HQ_Account_Plan__c</fullName>
        <label>Account Plan</label>
        <referenceTo>GE_HQ_Account_Plan__c</referenceTo>
        <relationshipLabel>Planned Accounts</relationshipLabel>
        <relationshipName>AccAccPlanRel</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>GE_HQ_Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>AccountAccountPlanningAssociation</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>GE_HQ_City__c</fullName>
        <formula>GE_HQ_Account__r.ShippingCity</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_HQ_Country__c</fullName>
        <formula>GE_HQ_Account__r.ShippingCountry</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_HQ_DUNS_Number__c</fullName>
        <formula>GE_HQ_Account__r.GE_HQ_DUNS_Number__c</formula>
        <label>DUNS Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_HQ_Phone__c</fullName>
        <formula>GE_HQ_Account__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_HQ_SFDC_LEGACY_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>SFDC Legacy ID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>GE_HQ_Sales_Region__c</fullName>
        <formula>GE_HQ_Account__r.GE_ES_Sales_Region__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_HQ_Site_Use_Code__c</fullName>
        <formula>TEXT(GE_HQ_Account__r.GE_HQ_Site_Use_Code__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Site Use Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_HQ_State__c</fullName>
        <formula>GE_HQ_Account__r.ShippingState</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>State/Province</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_HQ_Station_Name__c</fullName>
        <formula>GE_HQ_Account__r.GE_HQ_Station_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Station Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_HQ_Street__c</fullName>
        <formula>GE_HQ_Account__r.ShippingStreet</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Street</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_OG_AccountId__c</fullName>
        <formula>GE_HQ_Account__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AccountId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_OG_Region__c</fullName>
        <formula>GE_HQ_Account__r.GE_OG_Region_Tier1__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GE OG Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_PRM_A_Plan_Tier1__c</fullName>
        <formula>TEXT(GE_HQ_Account_Plan__r.GE_HQ_Buss_Tier__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tier 1 P&amp;L</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Acnt_Plan_R__c</fullName>
        <formula>GE_HQ_Account_Plan__r.GE_PRM_Act_Plan__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Plan Record Type</label>
        <type>Text</type>
    </fields>
    <label>My GE Account</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>Coca-Cola</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>My_GE_Accounts</fullName>
        <columns>NAME</columns>
        <columns>GE_HQ_Account__c</columns>
        <columns>GE_HQ_DUNS_Number__c</columns>
        <columns>GE_HQ_Site_Use_Code__c</columns>
        <columns>GE_HQ_Street__c</columns>
        <columns>GE_HQ_City__c</columns>
        <columns>GE_HQ_State__c</columns>
        <columns>GE_HQ_Country__c</columns>
        <columns>GE_HQ_Phone__c</columns>
        <columns>GE_OG_Region__c</columns>
        <columns>GE_HQ_Station_Name__c</columns>
        <columns>GE_HQ_Account_Plan__c</columns>
        <columns>GE_HQ_Acc_Type__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>GE_HQ_Acc_Type__c</field>
            <operation>equals</operation>
            <value>Private Plan</value>
        </filters>
        <label>My GE Accounts</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>A-{0000000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>My GE Accounts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>